WpfBlazorHybridApp - Package Microsoft.Data.SqlClient added

--- a/WpfBlazorHybridApp/WpfBlazorHybridApp.csproj
+++ b/WpfBlazorHybridApp/WpfBlazorHybridApp.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Wpf" Version="8.0.7" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.5" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
   </ItemGroup>
 
